# bin/api/controllers/health/router.js
@@ -1,0 +1,11 @@
+"use strict";
+var __importDefault = (this && this.__importDefault) || function (mod) {
+    return (mod && mod.__esModule) ? mod : { "default": mod };
+};
+Object.defineProperty(exports, "__esModule", { value: true });
+const express_1 = __importDefault(require("express"));
+const controller_1 = __importDefault(require("./controller"));
+exports.default = express_1.default
+    .Router()
+    .get('/', controller_1.default.check);
+//# sourceMappingURL=router.js.map
